--- a/Chalkable.Tests/Chalkable.Tests.csproj
+++ b/Chalkable.Tests/Chalkable.Tests.csproj
@@ -53,6 +53,7 @@
     <Compile Include="Services\Master\MasterServiceTestBase.cs" />
     <Compile Include="Services\Master\SchoolServiceTest.cs" />
     <Compile Include="Services\Master\UserServiceTest.cs" />
+    <Compile Include="Services\School\AddressServiceTest.cs" />
     <Compile Include="Services\School\AttendanceReasonServiceTest.cs" />
     <Compile Include="Services\School\AttendanceServiceTest.cs" />
     <Compile Include="Services\School\BaseSchoolServiceTest.Assert.cs" />
