--- a/Chalkable.Tests/Chalkable.Tests.csproj
+++ b/Chalkable.Tests/Chalkable.Tests.csproj
@@ -36,6 +36,7 @@
     <Reference Include="System" />
     <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -50,12 +51,15 @@
     <Compile Include="OnDataBaseTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\Master\BackgrounTaskServiceTest.cs" />
+    <Compile Include="Services\Master\BaseMasterServiceLocatorTest.cs" />
     <Compile Include="Services\Master\MasterServiceTestBase.cs" />
+    <Compile Include="Services\Master\PictureServiceTest.cs" />
     <Compile Include="Services\Master\SchoolServiceTest.cs" />
     <Compile Include="Services\Master\UserServiceTest.cs" />
     <Compile Include="Services\School\AddressServiceTest.cs" />
     <Compile Include="Services\School\AttendanceReasonServiceTest.cs" />
     <Compile Include="Services\School\AttendanceServiceTest.cs" />
+    <Compile Include="Services\School\BaseSchoolServiceLocatorTest.cs" />
     <Compile Include="Services\School\BaseSchoolServiceTest.Assert.cs" />
     <Compile Include="Services\School\BaseSchoolServiceTest.cs" />
     <Compile Include="Services\School\CourseServiceTest.cs" />
@@ -64,6 +68,7 @@
     <Compile Include="Services\School\RoomServiceTest.cs" />
     <Compile Include="Services\School\SchoolTestContext.cs" />
     <Compile Include="Services\School\SchoolYearServiceTest.cs" />
+    <Compile Include="Services\TestBlobStorageService.cs" />
     <Compile Include="Services\ServiceTestBase.cs" />
     <Compile Include="TestBase.cs" />
     <Compile Include="TestBase.Pathes.cs" />
