--- a/Chalkable.Tests/Chalkable.Tests.csproj
+++ b/Chalkable.Tests/Chalkable.Tests.csproj
@@ -52,6 +52,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\Master\BackgrounTaskServiceTest.cs" />
     <Compile Include="Services\Master\BaseMasterServiceLocatorTest.cs" />
+    <Compile Include="Services\Master\DepartmentServiceTest.cs" />
     <Compile Include="Services\Master\MasterServiceTestBase.cs" />
     <Compile Include="Services\Master\PictureServiceTest.cs" />
     <Compile Include="Services\Master\SchoolServiceTest.cs" />
