--- a/Chalkable.Tests/Chalkable.Tests.csproj
+++ b/Chalkable.Tests/Chalkable.Tests.csproj
@@ -65,6 +65,7 @@
     <Compile Include="Services\School\BaseSchoolServiceTest.cs" />
     <Compile Include="Services\School\CourseServiceTest.cs" />
     <Compile Include="Services\School\MarkingPeriodServiceTest.cs" />
+    <Compile Include="Services\School\PeriodServiceTest.cs" />
     <Compile Include="Services\School\PhoneServiceTest.cs" />
     <Compile Include="Services\School\RoomServiceTest.cs" />
     <Compile Include="Services\School\ScheduleSectionServiceTest.cs" />
