added PreferenceController, DepartmentController added actionFilters fixed in DepartmentService

--- a/Chalkable.Data.Common/Chalkable.Data.Common.csproj
+++ b/Chalkable.Data.Common/Chalkable.Data.Common.csproj
@@ -69,6 +69,7 @@
     <Compile Include="Backup\BackupHelper.cs" />
     <Compile Include="DataAccessBase.cs" />
     <Compile Include="DataEntittyAttr.cs" />
+    <Compile Include="Enums\ApplicationPermissionType.cs" />
     <Compile Include="Enums\ImportSystemType.cs" />
     <Compile Include="Orm.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
