--- a/Chalkable.Common/Chalkable.Common.csproj
+++ b/Chalkable.Common/Chalkable.Common.csproj
@@ -65,6 +65,7 @@
     <Compile Include="Settings.cs" />
     <Compile Include="StringTools.cs" />
     <Compile Include="UrlTools.cs" />
+    <Compile Include="Web\ChalkableJsonResponce.cs" />
     <Compile Include="Web\JavaScriptString.cs" />
     <Compile Include="Web\MagicJSONSerializer.cs" />
     <Compile Include="Web\SensitiveData.cs" />
