--- a/Chalkable.BusinessLogic/Chalkable.BusinessLogic.csproj
+++ b/Chalkable.BusinessLogic/Chalkable.BusinessLogic.csproj
@@ -44,6 +44,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Logic\SchoolStateMachine.cs" />
+    <Compile Include="Model\BlobContainerInfo.cs" />
+    <Compile Include="Model\BlobInfo.cs" />
     <Compile Include="Model\RecipientInfo.cs" />
     <Compile Include="Model\UserInfo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
