--- a/Chalkable.Common/Chalkable.Common.csproj
+++ b/Chalkable.Common/Chalkable.Common.csproj
@@ -42,6 +42,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ChalkableList.cs" />
     <Compile Include="ChlkResources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
