added SimpleUpdate for List objects to Orm added StudentAnnouncementService

--- a/Chalkable.Web/Web.config
+++ b/Chalkable.Web/Web.config
@@ -16,10 +16,14 @@
   </appSettings>
   <connectionStrings>
     
-    <add name="ChalkableMaster" connectionString="Data Source=wcc87p1bed.database.windows.net;Initial Catalog=ChalkableMaster;UID=chalkableadmin;Pwd=Hellowebapps1!" />
+    <!--<add name="ChalkableMaster" connectionString="Data Source=wcc87p1bed.database.windows.net;Initial Catalog=ChalkableMaster;UID=chalkableadmin;Pwd=Hellowebapps1!" />
     <add name="ChalkableSchoolTemplate" connectionString="Data wcc87p1bed.database.windows.net;Initial Catalog=ChalkableSchoolTemplate;UID=chalkableadmin;Pwd=Hellowebapps1!" />
-    <add name="ChalkableSchool" connectionString="Data Source={0};Initial Catalog={1};UID={2};Pwd={3}" />
+    <add name="ChalkableSchool" connectionString="Data Source={0};Initial Catalog={1};UID={2};Pwd={3}" />-->
 
+    <add name="ChalkableMaster" connectionString="Data Source=YURAN-PC\YURAXP;Initial Catalog=chalkable_master;UID=sa;Pwd=yurshmir90" />
+    <add name="ChalkableSchoolTemplate" connectionString="Data Source=YURAN-PC\YURAXP;Initial Catalog=chalkable2;UID=sa;Pwd=yurshmir90" />
+    <add name="ChalkableSchool" connectionString="Data Source={0};Initial Catalog={1};UID={2};Pwd={3}" />
+  
   </connectionStrings>
   <system.web>
     <httpRuntime targetFramework="4.5" />
