--- a/Chalkable.BusinessLogic/Chalkable.BusinessLogic.csproj
+++ b/Chalkable.BusinessLogic/Chalkable.BusinessLogic.csproj
@@ -92,6 +92,7 @@
     <Compile Include="Services\School\SchoolServiceBase.cs" />
     <Compile Include="Services\School\SchoolYearService.cs" />
     <Compile Include="Services\School\ServiceLocatorSchool.cs" />
+    <Compile Include="Services\School\StudentAnnouncementService.cs" />
     <Compile Include="Services\School\StudentParentService.cs" />
     <Compile Include="Services\StorageBlobService.cs" />
     <Compile Include="Services\UserContext.cs" />
