--- a/Chalkable.Tests/Chalkable.Tests.csproj
+++ b/Chalkable.Tests/Chalkable.Tests.csproj
@@ -76,6 +76,7 @@
     <Compile Include="Services\School\ScheduleSectionServiceTest.cs" />
     <Compile Include="Services\School\SchoolTestContext.cs" />
     <Compile Include="Services\School\SchoolYearServiceTest.cs" />
+    <Compile Include="Services\School\StudentAnnouncementServiceTest.cs" />
     <Compile Include="Services\TestBlobStorageService.cs" />
     <Compile Include="Services\ServiceTestBase.cs" />
     <Compile Include="TestBase.cs" />
