Added Database update task handler

--- a/Chalkable.Data.Master/Chalkable.Data.Master.csproj
+++ b/Chalkable.Data.Master/Chalkable.Data.Master.csproj
@@ -49,6 +49,7 @@
     <Compile Include="DataAccess\UserDataAccess.cs" />
     <Compile Include="Model\BackgroundTask.cs" />
     <Compile Include="Model\ChalkableDepartment.cs" />
+    <Compile Include="Model\DatabaseUpdateTaskData.cs" />
     <Compile Include="Model\District.cs" />
     <Compile Include="Model\ImportSystemType.cs" />
     <Compile Include="Model\Preference.cs" />
