--- a/Chalkable.Web/Chalkable.Web.csproj
+++ b/Chalkable.Web/Chalkable.Web.csproj
@@ -132,13 +132,17 @@
     <Compile Include="ActionResults\ChalkableJsonResult.cs" />
     <Compile Include="Controllers\ChalkableDepartmentController.cs" />
     <Compile Include="Controllers\DbMaintenanceController.cs" />
+    <Compile Include="Controllers\PeriodController.cs" />
     <Compile Include="Controllers\GradingStyleController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\MarkingPeriodController.cs" />
     <Compile Include="Controllers\PersonControllers\AdminController.cs" />
     <Compile Include="Controllers\PersonControllers\StudentController.cs" />
     <Compile Include="Controllers\PersonControllers\TeacherController.cs" />
     <Compile Include="Controllers\PreferenceController.cs" />
+    <Compile Include="Controllers\ScheduleSectionController.cs" />
     <Compile Include="Controllers\SchoolController.cs" />
+    <Compile Include="Controllers\SchoolYearController.cs" />
     <Compile Include="Controllers\StorageMonitorController.cs" />
     <Compile Include="Controllers\PersonControllers\PersonController.cs" />
     <Compile Include="Extensions\StaticContentExtenstion.cs" />
@@ -152,8 +156,10 @@
     <Compile Include="Models\BackgroundTaskViewData.cs" />
     <Compile Include="Models\Binders\DateTimeBinder.cs" />
     <Compile Include="Models\ChalkableDepartmentViewData.cs" />
+    <Compile Include="Models\PeriodViewData.cs" />
     <Compile Include="Models\GradingStyleVeiwData.cs" />
     <Compile Include="Models\IdNameViewData.cs" />
+    <Compile Include="Models\MarkingPeriodViewData.cs" />
     <Compile Include="Models\PersonViewDatas\ParentViewData.cs" />
     <Compile Include="Models\PersonViewDatas\PersonInfoViewData.cs" />
     <Compile Include="Models\PersonViewDatas\PersonViewData.cs" />
@@ -166,9 +172,11 @@
     <Compile Include="Models\PreferenceVeiwData.cs" />
     <Compile Include="Models\Binders\StringConstructedObjectBinder.cs" />
     <Compile Include="Models\RoleViewData.cs" />
+    <Compile Include="Models\ScheduleSectionViewData.cs" />
     <Compile Include="Models\SchoolInfoViewData.cs" />
     <Compile Include="Models\SchoolPeapleViewData.cs" />
     <Compile Include="Models\SchoolViewData.cs" />
+    <Compile Include="Models\SchoolYearViewData.cs" />
     <Compile Include="Models\SisSyncViewData.cs" />
     <Compile Include="Models\StorageMonitorViewData.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
