Fixed route mapping

--- a/Chalkable.Web/Web.config
+++ b/Chalkable.Web/Web.config
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   http://go.microsoft.com/fwlink/?LinkId=169433
@@ -16,13 +16,13 @@
   </appSettings>
   <connectionStrings>
     
-    <!--<add name="ChalkableMaster" connectionString="Data Source=wcc87p1bed.database.windows.net;Initial Catalog=ChalkableMaster;UID=chalkableadmin;Pwd=Hellowebapps1!" />
+    <add name="ChalkableMaster" connectionString="Data Source=wcc87p1bed.database.windows.net;Initial Catalog=ChalkableMaster;UID=chalkableadmin;Pwd=Hellowebapps1!" />
     <add name="ChalkableSchoolTemplate" connectionString="Data wcc87p1bed.database.windows.net;Initial Catalog=ChalkableSchoolTemplate;UID=chalkableadmin;Pwd=Hellowebapps1!" />
-    <add name="ChalkableSchool" connectionString="Data Source={0};Initial Catalog={1};UID={2};Pwd={3}" />-->
-
-    <add name="ChalkableMaster" connectionString="Data Source=.;Initial Catalog=chalkablemaster;UID=sa;Pwd=qwerty" />
-    <add name="ChalkableSchoolTemplate" connectionString="Data Source=.;Initial Catalog=chalkableschool;UID=sa;Pwd=qwerty" />
     <add name="ChalkableSchool" connectionString="Data Source={0};Initial Catalog={1};UID={2};Pwd={3}" />
+
+    <!--<add name="ChalkableMaster" connectionString="Data Source=.;Initial Catalog=chalkablemaster;UID=sa;Pwd=qwerty" />
+    <add name="ChalkableSchoolTemplate" connectionString="Data Source=.;Initial Catalog=chalkableschool;UID=sa;Pwd=qwerty" />
+    <add name="ChalkableSchool" connectionString="Data Source={0};Initial Catalog={1};UID={2};Pwd={3}" />-->
   
   </connectionStrings>
   <system.web>
