--- a/Chalkable.Tests/Chalkable.Tests.csproj
+++ b/Chalkable.Tests/Chalkable.Tests.csproj
@@ -58,6 +58,9 @@
     <Compile Include="Services\Master\SchoolServiceTest.cs" />
     <Compile Include="Services\Master\UserServiceTest.cs" />
     <Compile Include="Services\School\AddressServiceTest.cs" />
+    <Compile Include="Services\School\AnnouncementAttachmentServiceTest.cs" />
+    <Compile Include="Services\School\AnnouncementQnServiceTest.cs" />
+    <Compile Include="Services\School\AnnouncementServiceTest.cs" />
     <Compile Include="Services\School\AttendanceReasonServiceTest.cs" />
     <Compile Include="Services\School\AttendanceServiceTest.cs" />
     <Compile Include="Services\School\BaseSchoolServiceLocatorTest.cs" />
