--- a/Chalkable.Web/Web.config
+++ b/Chalkable.Web/Web.config
@@ -16,13 +16,9 @@
   </appSettings>
   <connectionStrings>
     
-    <add name="ChalkableMaster" connectionString="Data Source=wcc87p1bed.database.windows.net;Initial Catalog=ChalkableMaster;UID=chalkableadmin;Pwd=Hellowebapps1!" />
-    <add name="ChalkableSchoolTemplate" connectionString="Data wcc87p1bed.database.windows.net;Initial Catalog=ChalkableSchoolTemplate;UID=chalkableadmin;Pwd=Hellowebapps1!" />
-    <add name="ChalkableSchool" connectionString="Data Source={0};Initial Catalog={1};UID={2};Pwd={3}" />
-
-    <!--<add name="ChalkableMaster" connectionString="Data Source=.;Initial Catalog=chalkablemaster;UID=sa;Pwd=qwerty" />
+    <add name="ChalkableMaster" connectionString="Data Source=.;Initial Catalog=chalkablemaster;UID=sa;Pwd=qwerty" />
     <add name="ChalkableSchoolTemplate" connectionString="Data Source=.;Initial Catalog=chalkableschool;UID=sa;Pwd=qwerty" />
-    <add name="ChalkableSchool" connectionString="Data Source={0};Initial Catalog={1};UID={2};Pwd={3}" />-->
+    <add name="ChalkableSchool" connectionString="Data Source={0};Initial Catalog={1};UID={2};Pwd={3}" />
   
   </connectionStrings>
   <system.web>
