added orig and partial css to ignore list

--- a/.hgignore
+++ b/.hgignore
@@ -12,7 +12,7 @@ Chalkable.Web/.idea/
 Chalkable.Web/app/ria/.svn/
 Chalkable.Web/.sass-cache
 Chalkable.Web/Content/partials/**
-Chalkable.Web/Content/index.css
-Chalkable.Web/Content/screen-index.css
-Chalkable.Web/Content/screen.css
 Chalkable.Web/assets/sass/*.css
+*.orig
+Chalkable.Web/assets/sass/partials/controls/*.css
+Chalkable.Web/Content/*.css
