--- a/Chalkable.BusinessLogic/Chalkable.BusinessLogic.csproj
+++ b/Chalkable.BusinessLogic/Chalkable.BusinessLogic.csproj
@@ -45,6 +45,7 @@
   <ItemGroup>
     <Compile Include="Logic\SchoolStateMachine.cs" />
     <Compile Include="Mapping\GradingStyleMapper.cs" />
+    <Compile Include="Model\AttachmentContentInfo.cs" />
     <Compile Include="Model\BlobContainerInfo.cs" />
     <Compile Include="Model\BlobInfo.cs" />
     <Compile Include="Model\RecipientInfo.cs" />
